# JustKV

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  profile.ts
crates/benchmark-cli/: Cargo.toml
crates/benchmark-cli/benches/: benchmark_cli.rs
crates/benchmark-cli/src/: args.rs  bench.rs  cli.rs  command.rs  connection.rs  lib.rs  main.rs  render.rs  report.rs  resp.rs  runner.rs  spec.rs
crates/benchmark-cli/src/benchmark/: connection.rs  mod.rs  model.rs  request.rs  runner.rs  stats.rs
crates/benchmark-cli/src/cli/: mod.rs  uri.rs
crates/benchmark-cli/src/output/: mod.rs
crates/benchmark-cli/src/resp/: encode.rs  io.rs  mod.rs  skip.rs
crates/benchmark-cli/src/workload/: builtin.rs  mod.rs  template.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  client.rs  command.rs  main.rs  output.rs  timing.rs
crates/cli/src/repl/: helper.rs  meta.rs  mod.rs
crates/commands/: Cargo.toml
crates/commands/benches/: commands.rs
crates/commands/src/: command.rs  connection.rs  dispatch.rs  dispatcher.rs  keyspace.rs  lib.rs  object.rs  pubsub.rs  scripting.rs  transaction.rs  ttl.rs  util.rs
crates/commands/src/dispatch/: dispatch.rs  identify.rs  mod.rs  registry.rs  router.rs
crates/commands/src/geo/: add.rs  mod.rs  parse.rs  read.rs  search.rs
crates/commands/src/hash/: core.rs  counter.rs  mod.rs  random.rs  scan.rs
crates/commands/src/list/: blocking.rs  core.rs  mod.rs  moves.rs  range.rs
crates/commands/src/set/: algebra.rs  core.rs  mod.rs  random.rs  scan.rs
crates/commands/src/stream/: ack.rs  add.rs  claim.rs  delete.rs  group.rs  mod.rs  parse.rs  range.rs
crates/commands/src/string/: bitmap.rs  counter.rs  delete.rs  expiry.rs  get_set.rs  hyperlog.rs  lcs.rs  length.rs  mod.rs  multi.rs
crates/commands/src/zset/: algebra.rs  core.rs  mod.rs  pop.rs  random.rs  range.rs  scan.rs
crates/commands/tests/: delex_xdelex.rs  keyspace_randomkey.rs  lcs.rs  scripting.rs  string_set.rs  string_substr.rs  transaction.rs
crates/engine/: Cargo.toml
crates/engine/src/: helpers.rs  keyspace.rs  lib.rs  pattern.rs  pubsub.rs  script.rs  transaction.rs  ttl.rs  value.rs
crates/engine/src/geo/: math.rs  mod.rs  read.rs  search.rs  write.rs
crates/engine/src/hash/: core.rs  counter.rs  mod.rs  random.rs  scan.rs
crates/engine/src/list/: core.rs  mod.rs  moves.rs  multi_pop.rs
crates/engine/src/set/: algebra.rs  core.rs  mod.rs  random.rs  scan.rs
crates/engine/src/stream/: claim.rs  delete.rs  group.rs  mod.rs  range.rs  stream_types.rs  types.rs  write.rs
crates/engine/src/strings/: bitmap.rs  core.rs  counter.rs  delete.rs  digest.rs  expiry.rs  hyperlog.rs  lcs.rs  mod.rs  multi.rs  range.rs
crates/engine/src/zset/: algebra.rs  core.rs  mod.rs  pop.rs  random.rs  range.rs  scan.rs
crates/justkv/: Cargo.toml
crates/justkv/src/commands/: connection.rs  dispatcher.rs  keyspace.rs  mod.rs  ttl.rs  util.rs
crates/justkv/src/commands/geo/: add_ops.rs  parse.rs  read_ops.rs  search_ops.rs
crates/justkv/src/commands/hash/: core_ops.rs  counter_ops.rs  mod.rs  random_ops.rs  scan_ops.rs
crates/justkv/src/commands/list/: blocking_ops.rs  core_ops.rs  mod.rs  move_ops.rs  range_ops.rs
crates/justkv/src/commands/set/: algebra_ops.rs  core_ops.rs  mod.rs  random_ops.rs  scan_ops.rs
crates/justkv/src/commands/stream/: ack_ops.rs  add_ops.rs  claim_ops.rs  group_ops.rs  mod.rs  parse.rs  range_ops.rs
crates/justkv/src/commands/string/: counter_ops.rs  expiry_ops.rs  get_set_ops.rs  length_ops.rs  mod.rs  multi_ops.rs
crates/justkv/src/commands/zset/: algebra_ops.rs  core_ops.rs  mod.rs  pop_ops.rs  random_ops.rs  range_ops.rs  scan_ops.rs
crates/justkv/src/engine/: value.rs
crates/justkv/src/engine/store/: helpers.rs  keyspace.rs  mod.rs  ttl.rs
crates/justkv/src/engine/store/geo/: search_ops.rs
crates/justkv/src/engine/store/hash/: core_ops.rs  scan_ops.rs
crates/justkv/src/engine/store/list/: core_ops.rs  move_ops.rs  multi_pop_ops.rs
crates/justkv/src/engine/store/rehash/: constants.rs  hashbrown_map.rs  insert_ops.rs  lookup_ops.rs  mod.rs  node.rs  rehash_ops.rs  remove_ops.rs  types.rs
crates/justkv/src/engine/store/set/: algebra_ops.rs  core_ops.rs  random_ops.rs
crates/justkv/src/engine/store/stream/: claim_ops.rs  group_ops.rs  mod.rs  range_ops.rs  types.rs  write_ops.rs
crates/justkv/src/engine/store/strings/: core_ops.rs  counter_ops.rs  expiry_ops.rs  mod.rs  multi_ops.rs  range_ops.rs
crates/justkv/src/engine/store/zset/: algebra_ops.rs  core_ops.rs  mod.rs  pop_ops.rs  range_ops.rs
crates/justkv/src/net/: connection.rs  listener.rs  mod.rs  profiling.rs  pubsub.rs  transaction.rs
crates/justkv/src/net/connection/: dispatch.rs  mod.rs  notifications.rs  util.rs
crates/justkv/src/protocol/: encoder.rs  types.rs
crates/justkv/tests/: command_flow.rs  concurrency.rs  keyspace_extended.rs  pubsub.rs  redis_api_surface.rs  transactions.rs  ttl_and_incr.rs
crates/justkv/tests/support/: mod.rs
crates/prof-cli/: Cargo.toml
crates/prof-cli/src/: cli.rs  command.rs  main.rs  net.rs  render.rs  session.rs
crates/protocol/: Cargo.toml
crates/protocol/benches/: protocol.rs
crates/protocol/src/: encoder.rs  lib.rs  parser.rs  types.rs
crates/rehash/: Cargo.toml
crates/rehash/benches/: map.rs
crates/rehash/src/: constants.rs  index.rs  insert.rs  iter.rs  lib.rs  lookup.rs  node.rs  rehash.rs  remove.rs  table.rs  tests.rs  types.rs
crates/server/: Cargo.toml
crates/server/benches/: server.rs
crates/server/src/: backup.rs  config.rs  lib.rs  listener.rs  main.rs  persistence.rs  profile.rs  profiling.rs  pubsub.rs  transaction.rs
crates/server/src/auth/: acl.rs  error.rs  mod.rs  service.rs  session.rs  state.rs
crates/server/src/backup/: io.rs  mod.rs  rdb.rs
crates/server/src/cli/: action.rs  config.rs  runtime.rs
crates/server/src/connection/: dispatch.rs  mod.rs  notifications.rs  util.rs
crates/server/src/listener/: accept.rs  background.rs  mod.rs
crates/server/src/pubsub/: connection.rs  mod.rs  notify.rs
(+271 files in other folders)
