[workspace]
members = [
    "crates/rehash",
    "crates/protocol",
    "crates/types",
    "crates/engine",
    "crates/commands",
    "crates/server",
    "crates/cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rehash   = { path = "crates/rehash" }
protocol = { path = "crates/protocol" }
types    = { path = "crates/types" }
engine   = { path = "crates/engine" }
commands = { path = "crates/commands" }

ahash = "0.8.12"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
hashbrown = "0.16.1"
itoa = "1.0.17"
parking_lot = "0.12.5"
proptest = "1.10.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"
tikv-jemallocator = "0.6.1"
ryu = "1.0.23"
socket2 = "0.6.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
