[workspace]
members = [
    "crates/alloc",
    "crates/rehash",
    "crates/protocol",
    "crates/types",
    "crates/profiler",
    "crates/engine",
    "crates/commands",
    "crates/server",
    "crates/cli",
    "crates/benchmark-cli",
    "crates/prof-cli",
    "crates/test-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.features]
profiling = [
    "benchmark-cli/profiling",
    "cli/profiling",
    "commands/profiling",
    "engine/profiling",
    "protocol/profiling",
    "rehash/profiling",
    "server/profiling",
    "types/profiling",
]

[workspace.dependencies]
betterkv-alloc = { path = "crates/alloc" }
rehash   = { path = "crates/rehash" }
protocol = { path = "crates/protocol" }
types    = { path = "crates/types" }
profiler = { path = "crates/profiler" }
engine   = { path = "crates/engine" }
commands = { path = "crates/commands" }
betterkv-server = { path = "crates/server" }

ahash = "0.8.12"
criterion = { version = "0.8.2", features = ["html_reports"] }
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
hashbrown = "0.16.1"
indexmap = "2.13"
memchr = "2.8"
smallvec = "1.15"
itoa = "1.0.17"
parking_lot = "0.12.5"
proptest = "1.10.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"
ryu = "1.0.23"
socket2 = "0.6.2"
sha1 = "0.10.6"
lz4_flex = "0.12"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
rand = "0.10.0"
serde_json = { version = "1.0.149", features = ["preserve_order"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
