[package]
name = "betterkv-benchmark"
version.workspace = true
edition.workspace = true

[[bin]]
name = "betterkv-benchmark"
path = "src/main.rs"

[dependencies]
tikv-jemallocator.workspace = true
bytes.workspace = true
itoa.workspace = true
protocol.workspace = true
rand.workspace = true
tokio.workspace = true
