[package]
name = "betterkv-benchmark"
version.workspace = true
edition.workspace = true

[[bin]]
name = "betterkv-benchmark"
path = "src/main.rs"

[dependencies]
betterkv-alloc.workspace = true
bytes.workspace = true
clap.workspace = true
itoa.workspace = true
protocol.workspace = true
tokio.workspace = true
indicatif = "0.18"
comfy-table = "7"
hdrhistogram = "7"
