[package]
name = "betterkv-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "betterkv-cli"
path = "src/main.rs"

[features]
profiling = ["profiler/enabled"]

[dependencies]
protocol.workspace = true
bytes.workspace = true
clap.workspace = true
rustyline = "14.0.0"
shlex = "1.3.0"
tokio.workspace = true
profiler.workspace = true