[package]
name = "commands"
version.workspace = true
edition.workspace = true

[features]
profiling = ["profiler/enabled"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "commands"
harness = false

[dependencies]
engine.workspace = true
types.workspace = true
protocol.workspace = true
profiler.workspace = true
ahash.workspace = true
bytes.workspace = true
memchr.workspace = true
hashbrown.workspace = true
itoa.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
ryu.workspace = true
mlua.workspace = true
tokio.workspace = true