[package]
name = "engine"
version.workspace = true
edition.workspace = true

[features]
profiling = ["profiler/enabled"]

[dependencies]
rehash.workspace = true
profiler.workspace = true
ahash.workspace = true
bytes.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
itoa.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
ryu.workspace = true
sha1.workspace = true

[dev-dependencies]
proptest.workspace = true
