[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
rehash.workspace = true
types.workspace = true
rapidhash.workspace = true
bytes.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
itoa.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
ryu.workspace = true
sha1.workspace = true
xxhash-rust.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
