[package]
name = "justkv"
version.workspace = true
edition.workspace = true

[features]
default = []
store-hashmap = []

[dependencies]
ahash.workspace = true
bytes.workspace = true
hashbrown.workspace = true
itoa.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
ryu.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
