[package]
name = "betterkv-prof"
version.workspace = true
edition.workspace = true

[[bin]]
name = "betterkv-prof"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
betterkv-server.workspace = true
bytes.workspace = true
clap.workspace = true
tokio.workspace = true

[features]
profiling = ["betterkv-server/profiling"]
