[package]
name = "rehash"
version.workspace = true
edition.workspace = true

[features]
profiling = ["profiler/enabled"]

[dependencies]
betterkv-alloc.workspace = true
profiler.workspace = true
getrandom = "0.3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "map"
harness = false
