[package]
name = "betterkv-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "betterkv-server"
path = "src/main.rs"

[features]
profiling = ["profiler/enabled"]

[dependencies]
betterkv-alloc.workspace = true
clap.workspace = true
commands.workspace = true
engine.workspace = true
types.workspace = true
protocol.workspace = true
profiler.workspace = true
ahash.workspace = true
bytes.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
itoa.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
socket2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
lz4_flex.workspace = true
sha2 = "0.10.9"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "server"
harness = false
